k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enteral-kingdom-landing-page
  namespace: enteral-kingdom  # ✅ Fix chính tả namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: enteral-kingdom-landing-page
  template:
    metadata:
      labels:
        app: enteral-kingdom-landing-page
    spec:
      containers:
      - name: enteral-kingdom-container
        image: metafi/enteral-kingdom-landing-page:0.1.1
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
