k8s/aws-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page-service
  namespace: enteral-kingdom   # ✅ Fix chính tả
spec:
  type: NodePort
  selector:
    app: enteral-kingdom-landing-page
  ports:
  - protocol: TCP
    port: 80          # Port của Service
    targetPort: 80    # Port của container Pod
    nodePort: 32001   # NodePort để truy cập từ bên ngoài
