k8s/doks-enteral-kingdom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page-ingress
  namespace: enteral-kingdom
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kingdoms.game 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-page-service  # đúng với service bạn đã tạo
            port:
              number: 80
